syntax = "proto3";

package auth;

option go_package = "./";

import "google/protobuf/timestamp.proto";

// ============================================
// AUTH SERVICE
// ============================================

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (Response);
  rpc ChangePassword(ChangePasswordRequest) returns (Response);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// ============================================
// MESSAGES
// ============================================

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  optional string bio = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string user_id = 1;
  string access_token = 2;
}

message ChangePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  repeated string roles = 3;
  string message = 4;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
  int32 expires_in = 4;
  string message = 5;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  optional string bio = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  int32 followers_count = 7;
  int32 following_count = 8;
  int32 posts_count = 9;
}

message Response {
  bool success = 1;
  string message = 2;
}